--- a/css/styles.css
+++ b/css/styles.css
@@ -4,9 +4,29 @@
 
 body {
   font-family: Optima, monospace;
-  background-color: rgb(95, 107, 144);
+  background-color: rgb(166, 186, 247);
   margin: 0;
   font-size: 14px;
   font-weight: normal;
   color: rgb(1, 9, 31);
+}
+
+h1 {
+  text-align: center;
+}
+
+.profile-picture {
+  width: 210px;
+  height: 300px;
+  border: 2px solid black;
+  border-radius: 7%;
+  text-align: right;
+  margin-left: 20px;
+  max-width: 30%;
+  min-width: 10%;
+  display: block;
+}
+
+.profile-picture:hover {
+  border: 5px solid black;
 }
