--- a/css/styles.css
+++ b/css/styles.css
@@ -13,6 +13,8 @@ body {
 
 h1 {
   text-align: center;
+  font-size: 50px;
+  text-transform: uppercase;
 }
 
 .profile-picture {
@@ -22,7 +24,7 @@ h1 {
   border-radius: 7%;
   text-align: right;
   margin-left: 20px;
-  max-width: 30%;
+  max-width: 50%;
   min-width: 10%;
   display: block;
 }
