--- a/css/styles.css
+++ b/css/styles.css
@@ -34,6 +34,10 @@ h1 {
 }
 
 .nav-link {
+  font-size: 25px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
 }
 
 li {
