add shadow profile pic

--- a/css/styles.css
+++ b/css/styles.css
@@ -27,6 +27,7 @@ h1 {
   height: 350px;
   border: 2px solid black;
   border-radius: 7%;
+  box-shadow: 20px 20px 20px black;
 }
 
 .profile-picture:hover {
