--- a/css/styles.css
+++ b/css/styles.css
@@ -41,10 +41,6 @@ h1 {
   justify-content: space-evenly;
 }
 
-li {
-  list-style: none;
-}
-
 .travelling:before {
   content: "🌍";
 }
@@ -63,6 +59,13 @@ li {
 
 .reading:before {
   content: "📚";
+}
+.interest-list {
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 35%;
 }
 
 h2 {
