--- a/css/styles.css
+++ b/css/styles.css
@@ -95,3 +95,9 @@ footer {
 .description {
   margin-left: 40px;
 }
+
+.fieldset-interests {
+  padding-top: 20px;
+  padding-bottom: 0px;
+  border: none;
+}
