--- a/css/styles.css
+++ b/css/styles.css
@@ -70,8 +70,8 @@ h1 {
 }
 
 h2 {
-  text-transform: uppercase;
-  border: 5px solid black;
+  _text-transform: uppercase;
+  _border: 5px solid black;
 }
 
 a[href^="https"] {
@@ -105,8 +105,26 @@ footer {
 .h2-socials {
   display: flex;
   justify-content: center;
+  text-transform: uppercase;
+  border: 5px solid black;
 }
 
 .fieldset-links {
   border: none;
+}
+
+.h2-my-interests {
+  text-transform: uppercase;
+  border: 5px solid black;
+  text-align: center;
+  margin-left: 20px;
+  padding: 13px;
+}
+
+.h2-contact-details {
+  text-transform: uppercase;
+  border: 5px solid black;
+  text-align: center;
+  margin-left: 20px;
+  padding: 10px;
 }
