--- a/css/styles.css
+++ b/css/styles.css
@@ -65,7 +65,7 @@ h1 {
   list-style: none;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-start;
   width: 35%;
 }
 
