--- a/css/styles.css
+++ b/css/styles.css
@@ -9,7 +9,7 @@ body {
   font-size: 18px;
   font-weight: normal;
   color: rgb(1, 9, 31);
-  width: 60%;
+  width: 70%;
 }
 
 h1 {
@@ -140,4 +140,10 @@ footer {
   text-transform: uppercase;
   border: 5px solid black;
   width: 100%;
+}
+
+.section-contact {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
