--- a/css/styles.css
+++ b/css/styles.css
@@ -70,11 +70,6 @@ h1 {
   width: 35%;
 }
 
-h2 {
-  _text-transform: uppercase;
-  _border: 5px solid black;
-}
-
 footer {
   margin: 20px;
   font-size: 20px;
@@ -103,7 +98,7 @@ footer {
   display: flex;
   justify-content: center;
   text-transform: uppercase;
-  border: 5px solid black;
+  border: 3px solid black;
 }
 
 .fieldset-links {
@@ -112,18 +107,21 @@ footer {
 
 .h2-my-interests {
   text-transform: uppercase;
-  border: 5px solid black;
+  border: 3px solid black;
   text-align: center;
   margin-left: 20px;
   padding: 13px;
+  border-radius: 10%;
 }
 
 .h2-contact-details {
   text-transform: uppercase;
-  border: 5px solid black;
+  border: 3px solid black;
   text-align: center;
   margin-left: 20px;
+  margin-right: 10px;
   padding: 10px;
+  border-radius: 10%;
 }
 
 .fieldset-aboutme {
@@ -138,12 +136,12 @@ footer {
   display: flex;
   justify-content: center;
   text-transform: uppercase;
-  border: 5px solid black;
+  border: 3px solid black;
   width: 100%;
 }
 
 .section-contact {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-start;
 }
