add flex socials

--- a/css/styles.css
+++ b/css/styles.css
@@ -145,3 +145,9 @@ footer {
   flex-direction: column;
   align-items: flex-start;
 }
+
+.a-socials {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
