--- a/css/styles.css
+++ b/css/styles.css
@@ -66,7 +66,7 @@ h1 {
   list-style: none;
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
+  align-items: center;
   width: 35%;
 }
 
