--- a/components/aboutme.css
+++ b/components/aboutme.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   align-items: center;
   border: none;
-  padding-bottom: 20px;
+  padding-bottom: 1rem;
 }
 
 .aboutme__header {
