--- a/components/interests-and-contacts.css
+++ b/components/interests-and-contacts.css
@@ -3,20 +3,13 @@
   display: flex;
   align-items: center;
 }
+
 .interests__header {
   text-transform: uppercase;
   border: 3px solid black;
   text-align: center;
-  margin-left: 20px;
-  padding: 13px;
-  border-radius: 10%;
-}
-.interests__header {
-  text-transform: uppercase;
-  border: 3px solid black;
-  text-align: center;
-  margin-left: 20px;
-  padding: 13px;
+  margin-left: 1.2rem;
+  padding: 0.8rem;
   border-radius: 10%;
 }
 
@@ -52,9 +45,9 @@
   text-transform: uppercase;
   border: 3px solid black;
   text-align: center;
-  margin-left: 20px;
-  margin-right: 10px;
-  padding: 10px;
+  margin-left: 1.5rem;
+  margin-right: 0.5rem;
+  padding: 0.5rem;
   border-radius: 10%;
 }
 
