--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@ body {
   font-family: Optima, monospace;
   background-color: rgb(166, 186, 247);
   margin: auto;
-  font-size: 18px;
+  font-size: 1.1rem;
   font-weight: normal;
   color: rgb(1, 9, 31);
   width: 70%;
@@ -16,12 +16,12 @@ body {
 
 h1 {
   text-align: center;
-  font-size: 50px;
+  font-size: 2.5rem;
   text-transform: uppercase;
 }
 
 footer {
-  margin: 20px;
-  font-size: 20px;
+  margin: 1rem;
+  font-size: 1.2rem;
   text-align: center;
 }
