amend styles header

--- a/global.css
+++ b/global.css
@@ -1,3 +1,28 @@
 * {
   box-sizing: border-box;
 }
+
+:root {
+  --lightgreen: #a3cbc1;
+}
+
+html,
+body {
+  height: 100%;
+}
+
+body {
+  margin-left: 10px;
+  padding: 0;
+}
+
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  overflow-wrap: break-word;
+  hyphens: auto;
+}
