--- a/components/header.css
+++ b/components/header.css
@@ -1,15 +1,21 @@
 .header {
   display: flex;
-  justify-content: space-around;
 }
 
 .header__profile-picture {
-  width: 15rem;
-  height: 22rem;
+  width: 100px;
+  height: 150px;
   border: 2px solid black;
   border-radius: 7%;
   box-shadow: 1.2rem 1.2rem 1.2rem black;
   margin-bottom: 2.3rem;
+}
+
+@media (min-width: 600px) {
+  .header__profile-picture {
+    width: 15rem;
+    height: 22rem;
+  }
 }
 
 .header__profile-picture:hover {
@@ -17,9 +23,15 @@
 }
 
 .header__nav-link {
-  font-size: 1.6rem;
+  font-size: 1rem;
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
+  align-items: flex-end;
   width: 60%;
+}
+
+@media (min-width: 600px) {
+  .header__nav-link {
+    font-size: 1.6rem;
+  }
 }
