--- a/components/aboutme.css
+++ b/components/aboutme.css
@@ -10,6 +10,5 @@
   display: flex;
   justify-content: center;
   text-transform: uppercase;
-  border: 3px solid black;
-  width: 100%;
+  border-bottom: 2px solid black;
 }
