--- a/components/header.css
+++ b/components/header.css
@@ -9,6 +9,7 @@
   border-radius: 7%;
   box-shadow: 1.2rem 1.2rem 1.2rem black;
   margin-bottom: 2.3rem;
+  margin-left: 20px;
 }
 
 @media (min-width: 600px) {
