--- a/components/interests-and-contacts.css
+++ b/components/interests-and-contacts.css
@@ -1,24 +1,25 @@
 .interests {
   border: none;
-  display: flex;
-  align-items: center;
+  _display: flex;
+  _align-items: center;
 }
 
 .interests__header {
   text-transform: uppercase;
   border: 3px solid black;
   text-align: center;
-  margin-left: 1.2rem;
-  padding: 0.8rem;
-  border-radius: 10%;
 }
 
 .interests__list {
   list-style: none;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  width: 35%;
+}
+
+@media (min-width: 600px) {
+  .interests__list {
+    align-items: center;
+  }
 }
 
 .interests__travelling:before {
@@ -29,7 +30,7 @@
   content: "🕵️‍♀️ ";
 }
 
-.interests__:before {
+.interests__longboard:before {
   content: "🛹";
 }
 
@@ -45,14 +46,11 @@
   text-transform: uppercase;
   border: 3px solid black;
   text-align: center;
-  margin-left: 1.5rem;
-  margin-right: 0.5rem;
-  padding: 0.5rem;
-  border-radius: 10%;
 }
 
 .contacts__section {
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
+  align-items: center;
+  line-height: 1rem;
 }
