--- a/components/socials.css
+++ b/components/socials.css
@@ -6,7 +6,8 @@
   display: flex;
   justify-content: center;
   text-transform: uppercase;
-  border: 3px solid black;
+  border-bottom: 2px solid black;
+  margin-right: 2rem;
 }
 
 .socials__link {
