--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,8 @@
 @import "components/header.css";
 @import "components/interests-and-contacts.css";
 @import "components/socials.css";
+@import "components/pictures.css";
+@import "components/footer.css";
 
 body {
   font-family: Optima, monospace;
@@ -16,10 +18,4 @@ h1 {
   text-align: center;
   font-size: 2.5rem;
   text-transform: uppercase;
-}
-
-footer {
-  margin: 1rem;
-  font-size: 1.2rem;
-  text-align: center;
 }
