--- a/components/footer.css
+++ b/components/footer.css
@@ -3,7 +3,7 @@
   display: flex;
   justify-content: center;
   gap: 100px;
-  background-color: var(--grey);
+  background-color: var(--lightgreen);
   position: fixed;
   bottom: -20px;
   width: 100%;
