--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@
 
 body {
   font-family: Optima, monospace;
-  background-color: var(--lightgreen);
+  background-color: var(--grey);
   font-size: 1.1rem;
   font-weight: normal;
   color: rgb(1, 9, 31);
@@ -18,4 +18,5 @@ h1 {
   text-align: center;
   font-size: 2.5rem;
   text-transform: uppercase;
+  background-color: var(--lightgreen);
 }
